Welcome to Bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 header{
     grid-area: header;
     background: url("../img/lucien_header.png");
-    background-size:cover;
+    background-size: cover;
     background-position: center;
 }
 a{
@@ -38,11 +38,12 @@ li{
     padding: 10px;
     transition: .3s;
 } 
-nav{grid-area: nav;}
+/* nav{grid-area: nav;} */
 nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    padding-left: 0;
 }
 nav ul li{
     margin: 2rem;
@@ -93,6 +94,7 @@ nav ul li{
 .serie__items{
     display: flex;
     justify-content: space-around;
+    padding-left: 0;
 }
 .serie__item:hover{
     background-color: rgba(0,0,0,0);
@@ -133,6 +135,7 @@ form{
     padding: 20px;
     margin: 0 auto;
     width: 300px;
+    padding-left: 10px;
 }
 input, textarea{
     border: 0;
@@ -189,13 +192,14 @@ footer{
     background-color: grey;
     color:white;
     bottom: 0;
-    padding: 10px;
+    /* padding: 10px; */
 }
 .footer{ 
     display:flex;
     justify-content: space-around;
     list-style: none;
     text-align: center;
+    padding-left: 0;
 }
 .footer__link{
     display: inline-block;
