--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ Header{
     background-position: center;
     min-height: 200px;
 }
+
+/* grid en index */
 .cards-mine{
     display: grid;
     grid-template-columns: 1fr;
@@ -21,6 +23,8 @@ Header{
     width:100%;
     height: 300px;
 }
+
+/* efecto aparecer */
 .fade-mine{
     display: flex;
     flex-direction: column;
@@ -48,10 +52,17 @@ Header{
     }
 }
 
+/* fondo del articulo-Serie */
+.serie{
+    background-color: rgba(134, 183, 184,.5);
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
 /* ver estilos del form */
 /* https://www.youtube.com/watch?v=SrC1EaIBdUI */
 .form-mine{
-    background-color: lightsteelblue;
+    background-color: rgba(134, 183, 184,.5);
     border-radius: 7px;
 }
 .field-mine{
@@ -64,6 +75,7 @@ Header{
 .center-content{
     text-align: center;
 }
+
 /* efecto iluminacion del boton */
 .button-mine{
     text-decoration: none;
@@ -80,7 +92,6 @@ Header{
                     0 0 30px purple;
     }
 }
- /* /ver estilos del form */
 
 .footer__link-mine{
     display: inline-block;
@@ -107,16 +118,7 @@ Header{
     transform: scale(1);
 }
 
-/* @media (min-width:640px) {
-    #carouselExampleIndicators{
-        margin-left: 150px;
-        margin-right: 150px;
-    }
-    .itemDesc-mine{
-        margin-left: 150px;
-        margin-right: 150px;
-    }
-} */
+/* MediaQueries propios */
 @media (min-width:768px) {
     .fade-mine{
         flex-direction: row;
@@ -126,21 +128,16 @@ Header{
         grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     }
 
-    #carouselExampleIndicators{
+    #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
         margin-left: 150px;
         margin-right: 150px;
     }
-    .itemDesc-mine{
-        margin-left: 150px;
-        margin-right: 150px;
+    .serie{
+        border: 10px solid rgba(134, 183, 184,.5);
     }
 }
 @media (min-width:1200px) {
-    #carouselExampleIndicators{
-        margin-left: 250px;
-        margin-right: 250px;
-    }
-    .itemDesc-mine{
+    #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
         margin-left: 250px;
         margin-right: 250px;
     }
