SEO_Accesibilidad_Performance

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   min-height: 100vh; }
 
 Header {
-  background: url("../img/lucien_header.png");
+  background: url("../img/lucien_header.jpeg");
   background-size: cover;
   background-position: center;
   min-height: 200px; }
