--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,5 +1,5 @@
 Header{
-    background: url("../img/lucien_header.png");
+    background: url("../img/lucien_header.jpeg");
     background-size: cover;
     background-position: center;
     min-height: 200px;
