--- a/assets/scss/components/_mediaqueries.scss
+++ b/assets/scss/components/_mediaqueries.scss
@@ -1,6 +1,12 @@
 // esto nose si va asi o trendria que ir en cada componente su mediaquerie
 /* MediaQueries propios */
 @media (min-width:768px) {
+    #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
+        // margin-left: $margin-tablet;
+        // margin-right: $margin-tablet;
+        /* usando un mixin */
+        @include carousel-margen($margin-tablet);
+    }
     .fade-mine{
         flex-direction: row;
         justify-content: space-around;
@@ -8,18 +14,22 @@
     .cards-mine{
         grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     }
-
-    #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
-        margin-left: $margin-tablet;
-        margin-right: $margin-tablet;
-    }
+/* usando get-map */ 
     .serie{
-        border: 10px solid $complementary-color;
+        border: 5px solid map-get($complementary-colors, serie);
+    }
+    .guionista{
+        border: 5px solid map-get($complementary-colors, guionista);
+    }
+    .dibujante{
+        border: 5px solid map-get($complementary-colors, dibujante);
     }
 }
 @media (min-width:1200px) {
     #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
-        margin-left: $margin-desktop;
-        margin-right: $margin-desktop;
+        // margin-left: $margin-desktop;
+        // margin-right: $margin-desktop;
+        /* usando un mixin */
+        @include carousel-margen($margin-desktop);
     }
 }
