--- a/assets/scss/components/_contacto.scss
+++ b/assets/scss/components/_contacto.scss
@@ -21,9 +21,9 @@
     padding: 10px 30px;
     border: 3px solid grey;
     border-radius: 10px;
-}
-.button-mine:hover{
-    animation: pulsate 1s ease-in-out;
+    &:hover{
+        animation: pulsate 1s ease-in-out;
+    }
 }
 @keyframes pulsate {
     0%{
@@ -31,4 +31,12 @@
                     0 0 30px purple;
     }
 }
-
+/* uso extend */
+.button-mine-enviar{
+    @extend .button-mine;
+    background-color: map-get($complementary-colors, dibujante);
+}
+.button-mine-borrar{
+    @extend .button-mine;
+    background-color: map-get($complementary-colors, guionista);
+}
