--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,22 +12,36 @@ Header {
   background-position: center;
   min-height: 200px; }
 
-/* grid en index */
+.disclaimer {
+  display: none; }
+
+.h1-index {
+  margin: 0;
+  font-size: 1.25rem;
+  font-weight: 400; }
+
 .cards-mine {
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px; }
-  .cards-mine .card-mine {
-    width: 100%;
-    height: 300px; }
 
-/* efecto aparecer */
+.card-mine {
+  width: 100%;
+  padding-bottom: 10px; }
+
+.contrast-text {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px; }
+
 .fade-mine {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-transform: uppercase;
-  line-height: 40px; }
+  margin-bottom: 4px; }
+  .fade-mine > a {
+    text-transform: uppercase; }
 
 .fade-mine__content {
   display: block;
@@ -47,7 +61,30 @@ Header {
     opacity: 1;
     transform: none; } }
 
-/* Usando un mapa */
+.index__link-mine {
+  display: inline-block;
+  margin-block: 2px;
+  text-decoration: none;
+  color: black;
+  position: relative;
+  text-align: center; }
+  .index__link-mine:hover {
+    color: black; }
+  .index__link-mine::after {
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: black;
+    border-radius: 4px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform .25s ease; }
+  .index__link-mine:hover::after {
+    transform: scale(1); }
+
 .serie {
   background-color: rgba(134, 183, 184, 0.5);
   border-radius: 5px;
@@ -63,8 +100,6 @@ Header {
   border-radius: 5px;
   margin-bottom: 10px; }
 
-/* ver estilos del form */
-/* https://www.youtube.com/watch?v=SrC1EaIBdUI */
 .form-mine {
   background-color: rgba(134, 183, 184, 0.5);
   border-radius: 7px; }
@@ -77,7 +112,6 @@ Header {
 .center-content {
   text-align: center; }
 
-/* efecto iluminacion del boton */
 .button-mine, .button-mine-enviar, .button-mine-borrar {
   text-decoration: none;
   padding: 10px 30px;
@@ -90,12 +124,27 @@ Header {
   0% {
     box-shadow: 0 0 25px aqua, 0 0 30px purple; } }
 
-/* uso extend */
 .button-mine-enviar {
   background-color: rgba(201, 113, 31, 0.5); }
 
 .button-mine-borrar {
   background-color: rgba(70, 112, 167, 0.5); }
+
+.btn-primary:hover {
+  background-color: rgba(201, 113, 31, 0.5);
+  border-color: rgba(201, 113, 31, 0.5); }
+
+.btn-primary:focus {
+  background-color: rgba(201, 113, 31, 0.5);
+  border-color: rgba(201, 113, 31, 0.5); }
+
+.btn-secondary:hover {
+  background-color: rgba(70, 112, 167, 0.5);
+  border-color: rgba(70, 112, 167, 0.5); }
+
+.btn-secondary:focus {
+  background-color: rgba(70, 112, 167, 0.5);
+  border-color: rgba(70, 112, 167, 0.5); }
 
 .footer__link-mine {
   display: inline-block;
@@ -119,10 +168,8 @@ Header {
   .footer__link-mine:hover::after {
     transform: scale(1); }
 
-/* MediaQueries propios */
 @media (min-width: 768px) {
   #carouselExampleIndicators, #carouselExampleIndicators1, #carouselExampleIndicators2, #carouselExampleIndicators3 {
-    /* usando un mixin */
     margin-left: 150px;
     margin-right: 150px; }
   .fade-mine {
@@ -130,16 +177,14 @@ Header {
     justify-content: space-around; }
   .cards-mine {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
-  /* usando get-map */
   .serie {
-    border: 5px solid rgba(134, 183, 184, 0.5); }
+    border: 2px solid rgba(134, 183, 184, 0.5); }
   .guionista {
-    border: 5px solid rgba(70, 112, 167, 0.5); }
+    border: 2px solid rgba(70, 112, 167, 0.5); }
   .dibujante {
-    border: 5px solid rgba(201, 113, 31, 0.5); } }
+    border: 2px solid rgba(201, 113, 31, 0.5); } }
 
 @media (min-width: 1200px) {
   #carouselExampleIndicators, #carouselExampleIndicators1, #carouselExampleIndicators2, #carouselExampleIndicators3 {
-    /* usando un mixin */
     margin-left: 250px;
     margin-right: 250px; } }
