--- a/assets/scss/components/_mediaqueries.scss
+++ b/assets/scss/components/_mediaqueries.scss
@@ -1,10 +1,10 @@
 // esto nose si va asi o trendria que ir en cada componente su mediaquerie
-/* MediaQueries propios */
+//* MediaQueries propios */
 @media (min-width:768px) {
     #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
         // margin-left: $margin-tablet;
         // margin-right: $margin-tablet;
-        /* usando un mixin */
+        //* usando un mixin */
         @include carousel-margen($margin-tablet);
     }
     .fade-mine{
@@ -14,22 +14,22 @@
     .cards-mine{
         grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     }
-/* usando get-map */ 
+//* usando get-map */ 
     .serie{
-        border: 5px solid map-get($complementary-colors, serie);
+        border: 2px solid map-get($complementary-colors, serie);
     }
     .guionista{
-        border: 5px solid map-get($complementary-colors, guionista);
+        border: 2px solid map-get($complementary-colors, guionista);
     }
     .dibujante{
-        border: 5px solid map-get($complementary-colors, dibujante);
+        border: 2px solid map-get($complementary-colors, dibujante);
     }
 }
 @media (min-width:1200px) {
     #carouselExampleIndicators,#carouselExampleIndicators1,#carouselExampleIndicators2,#carouselExampleIndicators3{
         // margin-left: $margin-desktop;
         // margin-right: $margin-desktop;
-        /* usando un mixin */
+        //* usando un mixin */
         @include carousel-margen($margin-desktop);
     }
 }
