--- a/assets/scss/components/_varios.scss
+++ b/assets/scss/components/_varios.scss
@@ -103,3 +103,8 @@
         margin-bottom: 10px;
     }
 }
+.grid-mine{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+    gap: 10px;
+}
