--- a/assets/scss/components/_varios.scss
+++ b/assets/scss/components/_varios.scss
@@ -100,11 +100,18 @@
     .#{$page} {
         background-color: $color;
         border-radius: 5px;
-        margin-bottom: 10px;
+        // margin-bottom: 10px;
     }
+}
+.container{
+    margin-bottom: 10px;
 }
 .grid-mine{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
     gap: 10px;
+}
+.text-justify-mine{
+    text-align: justify;
+    text-justify: inter-word;
 }
